Fixed line wrapping of labels in IE

--- a/assets/_styles/_forms.scss
+++ b/assets/_styles/_forms.scss
@@ -149,6 +149,8 @@ fieldset fieldset legend {
   } @else {
     @extend %paragraph--large;
   }
+  clear: both;
+  width: 100%;
 }
 
 fieldset fieldset label { 
